--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 option(BUILD_EXAMPLES "Build examples" OFF)
 
-project(print)
-set(PRINT_VERSION_PATCH 0)
+project(print)set(PRINT_VERSION_MAJOR 0)set(PRINT_VERSION_MINOR 1)
 set(PRINT_VERSION_PATCH 0)
 set(PRINT_VERSION_TWEAK 0)
 set(PRINT_VERSION 
