--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 option(BUILD_EXAMPLES "Build examples" OFF)
 
-project(print)set(PRINT_VERSION_MAJOR 0)set(PRINT_VERSION_MINOR 1)
+project(print)
+set(PRINT_VERSION_MAJOR 0)
 set(PRINT_VERSION_PATCH 0)
 set(PRINT_VERSION_TWEAK 0)
 set(PRINT_VERSION 
@@ -39,16 +40,11 @@ install(TARGETS print
 
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION include)
 install(EXPORT print-config DESTINATION cmake)
-
 if(BUILD_TESTS)
 enable_testing()
 file(GLOB ${PROJECT_NAME}_TEST_SOURCES tests/*.cpp)
 add_executable(check ${${PROJECT_NAME}_TEST_SOURCES})
 target_link_libraries(check ${PROJECT_NAME} ${DEPENDS_LIBRARIES})
-add_test(NAME check COMMAND check "-s" "-r" "compact" "--use-colour" "yes") 
+add_test(NAME check COMMAND check "-s" "-r" "compact" "--use-colour" "yes")
 endif()
-
-include(CPackConfig.cmake)
-EOF 
-
 include(CPackConfig.cmake)
